--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,31 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   color: #414141;               /* Dark gray */
   background-color: #EEEEEE;    /* Light gray */
-  font-size: 18px;
+  font-size: 20px;
 }
 h1 {
-  font-size: 2em;
+  background-color: #000080;
+  padding: 50px;
+  border-bottom: 2px solid #000000;
+  text-align: center;
+  font-size: 24px;
+  color: #FFFFFF;
 }
-h2 {
-  font-size: 1.6em;
-}
-h1, h2, h3, h4, h5, h6 {  /* makes all headers fonts this */
+h2, h3, h4, h5, h6 {  /* makes all headers fonts this */
   font-family: "Helvetica", "Arial", sans-serif;
-  font-weight: normal;   
+  font-weight: normal;
+  background-color: #DDE0E3;
+  font-size: 20px;
+  padding: 20px 0 20px 10px;
 }
 ul {
   list-style-type: circle; /* styles of unordered lists*/
 }
-
 ol {
   list-style-type: lower-roman; /* style of ordered lists*/
 }
@@ -24,5 +33,49 @@ a {
   text-decoration: none;  /* No underlined links*/
 }
 p {
-  text-align: left;  /* Other accepted values are right, center, or justify*/
+  padding: 5px;
+  text-align: center;  /* Other accepted values are right, center, or justify*/
+}
+
+.page {
+  width: 800px;
+  margin: 0 auto;
+}
+.button:link,
+.button:visited {
+  display: block;
+  text-decoration: none;
+  color: #FFF;
+  background-color: #5995DA;    /* Blue */
+  font-weight: bold;
+  padding: 10px;
+  text-align: center;
+  border: 2px solid #5D6063;    /* Dark gray */
+  border-radius: 5px;
+  width: 150px;
+  margin: 20px auto;
+}
+.button:hover,
+.button:visited:hover {
+  color: #FFF;
+  background-color: #76AEED;  /* Light blue */
+}
+.button:active,
+.button:visited:active {
+  color: #FFF;
+  background-color: #5995DA;  /* Blue */
+}
+p:first-of-type {
+  color: #7E8184;
+  font-style: italic;
+  margin-top: 20px;
+}
+p:last-of-type {
+  margin-bottom: 20px;
+}
+#button-2 {
+  background-color: #D55C5F;    /* Red */
+}
+#button-2 {
+  color: #5D6063;  /* Dark gray */
 }
