--- a/BolinBYU/styles.css
+++ b/BolinBYU/styles.css
@@ -32,9 +32,11 @@ a {
 p {
   padding: 5px;
   text-align: center;  /* Other accepted values are right, center, or justify*/
-  color: #7E8184;
-  font-style: italic;
+  color: #000000;
   margin-top: 20px;
+}
+img {
+  max-width:100%;
 }
 /*****************************************************************************/
 
@@ -48,7 +50,7 @@ p {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #000000;
+  background-color: #696969;
   width: 100%;
   height: 50px;
   display: flex;
@@ -99,61 +101,67 @@ p {
   width: 100%;
   height: 150px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  padding: 10px;
 }
 .header{
-  background-color: #000080;
+  background-color: #96BBFF;
 }
-.comment{
-  height: 50px;
+.body{
+  height: 400px;
+  margin: 0;
 }
 .feature-1 {
-  background-color: #F5CF8E;
-  padding: 10px
+  background-color: #D5D8DC;
+  margin: 1em;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
-.feature-2 {
-  background-color: #F09A9D;
-  padding: 10px
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
 }
-.feature-3 {
-  background-color: #C8C6FA;
-  padding: 10px
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
 }
-.feature-4{
-  background-color: #90EE90;
-  padding: 10px
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
 }
-
-/*p:first-of-type {
-  color: #7E8184;
-  font-style: italic;
-  margin-top: 20px;
+@media (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
 }
-p:last-of-type {
-  margin-bottom: 20px;
+@media (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
-#button-2 {
-  background-color: #D55C5F;    /* Red */
-/*}
-#button-2 {
-  color: #5D6063;  /* Dark gray */
-/*}*/
+.feature-footer {
+  background-color: #D5D8DC;
+  height: 100px;
+  outline-style: solid;
+}
 /*****************************************************************************/
 
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
-  body {
-    background-color: #F09A9D; /* Red */
+  .feature-1,
+  .column img,
+  .feature-3 {
+    width: 100%;
   }
 }
 /* Tablet Styles */
 @media only screen and (min-width: 401px) and (max-width: 960px) {
-  .sign-up,
-  .feature-1,
-  .feature-2,
-  .feature-3,
-  .feature-4 {
+  .feature-1 {
     width: 50%;
   }
 }
@@ -163,11 +171,8 @@ p:last-of-type {
     width: 960px;
     margin: 0 auto;
   }
-  .feature-1,
-  .feature-2,
-  .feature-3,
-  .feature-4 {
-    width: 25%;
+  .feature-1 {
+    width: 33%;
   }
   .header {
     height: 200px;
