--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,6 @@ body {
   font-size: 20px;
 }
 h1 {
-  background-color: #000080;
-  padding: 50px;
-  border-bottom: 2px solid #000000;
   text-align: center;
   font-size: 24px;
   color: #FFFFFF;
@@ -26,30 +23,6 @@ h2, h3, h4, h5, h6 {  /* makes all headers fonts this */
 ul {
   list-style-type: circle; /* styles of unordered lists*/
 }
-.hotbar {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #000000;
-}
-.hotbar li{
-  float: left;
-}
-.hotbar li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-.hotbar li a:hover:not(.active) {
-  background-color: #696969;
-}
-.active {
-  background-color: #28AFFF;
-}
-}
 ol {
   list-style-type: lower-roman; /* style of ordered lists*/
 }
@@ -59,11 +32,45 @@ a {
 p {
   padding: 5px;
   text-align: center;  /* Other accepted values are right, center, or justify*/
+  color: #000000;
+  margin-top: 20px;
 }
+img {
+  max-width:100%;
+}
+/*****************************************************************************/
 
 .page {
-  width: 800px;
-  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.hotbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #696969;
+  width: 100%;
+  height: 50px;
+  display: flex;
+}
+/*.hotbar {
+  float: left;
+}*/
+.hotbar a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  float: left;
+}
+.hotbar a:hover:not(.active) {
+  background-color: #696969;
+}
+.active {
+  background-color: #28AFFF;
 }
 .button:link,
 .button:visited {
@@ -89,17 +96,85 @@ p {
   color: #FFF;
   background-color: #5995DA;  /* Blue */
 }
-p:first-of-type {
-  color: #7E8184;
-  font-style: italic;
-  margin-top: 20px;
+
+.section {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
 }
-p:last-of-type {
-  margin-bottom: 20px;
+.header{
+  background-color: #96BBFF;
 }
-#button-2 {
-  background-color: #D55C5F;    /* Red */
+.body{
+  height: 400px;
+  margin: 0;
 }
-#button-2 {
-  color: #5D6063;  /* Dark gray */
+.feature-1 {
+  background-color: #D5D8DC;
+  margin: 1em;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+}
+@media (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+@media (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+.feature-footer {
+  background-color: #D5D8DC;
+  height: 100px;
+  outline-style: solid;
+}
+/*****************************************************************************/
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+  .feature-1,
+  .column img,
+  .feature-3 {
+    width: 100%;
+  }
+}
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+  .feature-1 {
+    width: 50%;
+  }
+}
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+  .page {
+    width: 960px;
+    margin: 0 auto;
+  }
+  .feature-1 {
+    width: 33%;
+  }
+  .header {
+    height: 200px;
+  }
 }
